title chaged on new branch

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Simple web</title>
+	<title>Simple website for business</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
