--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+2017 copy right 
+-->
 <head>
 	<title>Simple website for business</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
