--- a/simple.html
+++ b/simple.html
@@ -4,6 +4,7 @@
 -->
 <head>
 	<title>Simple website for business</title>
+    <mate name="viewport" content="device-width" />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
