--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 2017 copy right 
 -->
 <head>
-	<title>Simple website for business</title>
+	<title>A respectful website</title>
     <mate name="viewport" content="device-width" />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
@@ -18,11 +18,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			some interesting contents hear
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; git training comapay 2017</p>
 	</footer>
 </body>
 </html>
