content befor conflict

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-2017 copy right 
+this is the content before conflict 2017 copy right 
 -->
 <head>
 	<title>A respectful website</title>
