after and before conflict

--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <!--
+making more contents after and befor conflicting 
 this is the content before conflict 2017 copy right 
 -->
 <head>
-	<title>A respectful website</title>
+	<title>A respectful website of the year</title>
     <mate name="viewport" content="device-width" />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
