modifide after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -18,7 +18,8 @@ this is the content before conflict 2017 copy right
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content more more 
+            yes yes
 		</p>
 	</main>
 	<footer class="container">
