local: simple.hml modifide

--- a/simple.html
+++ b/simple.html
@@ -23,7 +23,7 @@ this is the content before conflict 2017 copy right
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; git training comapay 2017</p>
+		<p>&copy; 2017 git training</p>
 	</footer>
 </body>
 </html>
