for the last time simple file modified

--- a/simple.html
+++ b/simple.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--
-making more contents after and befor conflicting 
-this is the content before conflict 2017 copy right 
--->
 <head>
     <mate name="viewport" content="device-width" />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -16,14 +12,14 @@ this is the content before conflict 2017 copy right
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Content always use the same font family -->
 		<p>
 			Just some content more more 
             yes yes
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; 2017 git training</p>
+		<p>&copy; 2017.All rights reserved.</p>
 	</footer>
 </body>
 </html>
