--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
       </div>
     </div>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <!-- Main jumbotron for a primary marketing message or call to action
+        it's better to implement your one from ground up for max effect-->
     <div class="jumbotron">
       <div class="container">
         <h1>Hello, world!</h1>
