simple has been modified for taging demo

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <mate name="viewport" content="device-width" />
+    <title>updating the taging for comparison purpose</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
